[refs] updated the telescope paper Jansen

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -395,14 +395,15 @@ author = "F. Krummenacher",
 }
 
 @article{Jansen:2016bkd,
-      author         = "Jansen, H. and others",
-      title          = "{Performance of the EUDET-type beam telescopes}",
-      year           = "2016",
-      eprint         = "1603.09669",
-      archivePrefix  = "arXiv",
-      primaryClass   = "physics.ins-det",
-      reportNumber   = "DESY-16-055",
-      SLACcitation   = "%%CITATION = ARXIV:1603.09669;%%"
+	author = {{Jansen, Hendrik} and {Spannagel, Simon} and {Behr, Jörg} and {Bulgheroni, Antonio} and {Claus, Gilles} and {Corrin, Emlyn} and {Cussans, David} and {Dreyling-Eschweiler, Jan} and {Eckstein, Doris} and {Eichhorn, Thomas} and {Goffe, Mathieu} and {Gregor, Ingrid Maria} and {Haas, Daniel} and {Muhl, Carsten} and {Perrey, Hanno} and {Peschke, Richard} and {Roloff, Philipp} and {Rubinskiy, Igor} and {Winter, Marc}},
+	title = {Performance of the EUDET-type beam telescopes},
+	DOI= "10.1140/epjti/s40485-016-0033-2",
+	url= "http://dx.doi.org/10.1140/epjti/s40485-016-0033-2",
+	journal = {EPJ Techn Instrum},
+	year = 2016,
+	volume = 3,
+	number = 1,
+	pages = "7",
 }
 
 @online{OpenInventor,
