--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -270,12 +270,11 @@ the opposite beam. The generation of Beamstrahlung photons leads to
 the reduction of the available centre-of-mass energy $\sqrt{s}$ of the
 e\textsuperscript{+}e\textsuperscript{-} collisions. Their
 interactions produce lepton pairs and hadrons at very low polar angles
-which are mostly contained in the beam-pipe due to the effect of the
-axial magnetic field~\cite{Dannheim:1443516}. In the inner detector
-layers, incoherently produced electron-positron pairs ($\sim60$
-particles per bunch crossing) and $\gamma\gamma\rightarrow$hadrons
-events ($\sim54$ particles per bunch crossing) are the dominant
-backgrounds.
+which are mostly contained in the
+beam-pipe~\cite{Dannheim:1443516}. In the inner detector layers,
+incoherently produced electron-positron pairs ($\sim60$ particles per
+bunch crossing) and $\gamma\gamma\rightarrow$hadrons events ($\sim54$
+particles per bunch crossing) are the dominant backgrounds.
 
 The electron-positron pairs produced at low polar angles have very
 small transverse momenta. The occupancies in the innermost layers of
@@ -286,12 +285,13 @@ shielded from the backscattered particles which originate from the
 forward region.
 
 The $\gamma\gamma\rightarrow$hadrons interactions produce particles
-with a harder transverse momentum spectrum and a more central
+with a higher transverse momentum spectrum and a more central
 polar-angle distribution. This results in large rates of background
-particles reaching the outer detector layers.
+particles reaching the outer detector layers. In each train, at most
+one interesting physics event is expected along with $\sim1000$
+hadronic background events.
 
-In each train, at most one interesting physics event is expected along
-with $\sim1000$ hadronic background events. Hit time stamping is
+Hit time stamping on the level of 1 to 10~ns in all sub-detectors is
 needed in order to separate the physics from the background events.
 
 The exposure to radiation of the main detector elements is expected to
@@ -415,7 +415,10 @@ field of 4~T are required.
 In the innermost layers, an occupancy of $\approx3\%$ due to the
 beam-induced backgrounds is expected~\cite{Dannheim:1443516}. To
 separate these backgrounds from physics events, a time slicing of the
-hits with an accuracy of $\approx10$~ns is required.
+hits with an accuracy of $\approx10$~ns is required. To achieve this
+precise time stamping, hybrid solutions for the vertex detector are
+considered first as the readout chips have more advanced timing
+measurements technologies.
 
 In comparison to the current pixel detectors in the LHC experiments,
 the exposure to radiation of the CLIC vertex detector is moderate. For
