--- a/include/Telescope.tex
+++ b/include/Telescope.tex
@@ -55,9 +55,8 @@ ASICs~\cite{Timepix3Poikela} bump bonded to $300\,\micron$ thick
 p-in-n planar sensors as shown in \cref{fig:TPX3Telescope}. The
 sensors are depleted at a voltage of 30~V and a bias voltage of 50~V
 is applied. The Timepix3 readout chip threshold is set to $\sim1000$
-electrons. The planes are rotated by $9\degrees$ around the x axis
-(perpendicular to the beam axis) and the y axis (parallel to the beam
-axis) \cite{Akiba:2013yxa}. Given the pixel pitch and the sensor
+electrons. The planes are rotated by $9\degrees$ around the x and y
+axes~\cite{Akiba:2013yxa}. Given the pixel pitch and the sensor
 thickness, this angle mainly leads to clusters of three-hit
 pixels. Combining the TOT information, the reconstructed hit position
 provides sub-pixel resolution. A tracking resolution of
