[Telescope] Updated with Andreas comments

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -529,6 +529,11 @@ author = "F. Krummenacher",
       SLACcitation   = "%%CITATION = PHYSICS/0703058;%%"
 }
 
+@online{OnlineTelescopePositioning,
+      title          = "Online tool for optimising the placement of the telescope planes",
+      url            = "http://skulis.web.cern.ch/skulis/telescope/"
+}
+
 @online{SPS,
       title          = "CERN SPS",
       url            = "http://sba.web.cern.ch/sba/"
