[ThinSensors] few updates on the CLICpix

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -592,3 +592,37 @@ author = "F. Krummenacher",
       reportNumber   = "CLICDP-PUB-2016-001",
       SLACcitation   = "%%CITATION = ARXIV:1608.07538;%%"
 }
+
+@misc{clicpix,
+        author= {P. Valerio and others},
+        title={Design of the 65 nm CLICpix demonstrator chip},
+        year = {2012},
+        note ={\href{https://cds.cern.ch/record/1507691}{LCD-Note-2012-018}}
+}
+
+@misc{SLACBumpBonding,
+  author = "Tomada, A. and Kenney, C.",
+  year = "2015",
+  howpublished = "SLAC private communication"
+}
+
+
+@article{AlipourTehrani2016,
+title = "Recent results with HV-CMOS and planar sensors for the \{CLIC\} vertex detector ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "",
+number = "",
+pages = " - ",
+year = "2016",
+note = "",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/j.nima.2016.05.133",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900216305393",
+author = "Niloufar Alipour Tehrani",
+keywords = "Silicon pixel vertex detector",
+keywords = "Active edge sensors",
+keywords = "Guard ring",
+keywords = "HV-CMOS",
+keywords = "CLICpix",
+keywords = "Geant4 simulations "
+}
