--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -680,36 +680,45 @@ increasing the threshold than for thick sensors.
 %% --------------------------------------------- %%
 \section{Extrapolation to smaller pixels}
 
-The Timepix3 readout chip is used as a test vehicle for the
-characterisation of thin sensors. The test-beam measurements and the
-AllPix simulations show a good agreement. Although, the Timepix3
-readout chip has a pixel pitch of $55\,\micron$ and the goal for the
-CLIC vertex detector is to have pixels of pitch $25\,\micron$.
-
+As seen in this chapter, the Timepix3 readout ASIC is used as a test
+vehicle for the characterisation of thin sensors. The test-beam
+measurements and the AllPix simulations show a good
+agreement. Although, the Timepix3 ASIC has a pixel pitch of
+$55\,\micron$ and the goal for the CLIC vertex detector is to achieve
+pixels of pitch $25\,\micron$. The CLICpix readout ASIC~\cite{clicpix}
+implemented in 65~nm CMOS technology with a pitch of $25\,\micron$ is
+under development. But miniaturisation presents limits in the size of
+the bump bonding, wire bonding pads as well as cross talks between the
+pixels. A single-chip indium bump bonding process for $25\,\micron$
+pitch has been developed at SLAC~\cite{SLACBumpBonding} and a few
+assemblies with $200\,\micron$ thick planar sensors are successfully
+bump-bonded to CLICpix ASICs. The yield stays limited and unconnected,
+shorted and dead pixels are present~\cite{AlipourTehrani2016}.
 
 Previously, we have seen a good agreement between the AllPix
 simulations and the data taken in the test beams for thin silicon
-sensors. The simulation is used in the following to predict the
-performance of smaller pixel pitches.
+sensors. The simulation can be used to predict the performance of thin
+sensors and small pitches in terms of charge sharing without taking
+into account the features due to the miniaturisation of the bumps or
+the performance of the CLICpix ASIC.
 
-Figure~\ref{fig:cluSize25Pitch} shows the cluster-size
-distribution and the hit residuals for an extrapolation of the
-simulation to $25\,\micron$ pitch pixels with $50\,\micron$ thick
-sensors with a Timepix3-type readout chip operated at 500 electrons
-threshold with 10-bit TOT measurement and an electronic noise of
-$\sim$90 electrons. The same digitiser as the one used to validate the
-simulation in \cref{sec:ThinSensorSimuValidation} is used for the
-extrapolation. Even with a small pitch, in such thin sensors, only
-$\sim$16\% of clusters originating from minimum ionising particles
-contain more than one pixel. The residual distribution is therefore
-dominated by the broad peak from single-pixel clusters and the
-resulting resolution of $\sim6\,\micron$ (with the unfolded tracking
-resolution) is still significantly worse than the required
-$3\,\micron$. It can be concluded that the required resolution can be
-either obtained with smaller pixels using planar sensors or new
-solution of charge sharing are needed in order to reduce even more the
-number of single-pixel clusters. By tilting the detectors, the charge
-sharing could be as well optimised.
+Figure~\ref{fig:cluSize25Pitch} shows the cluster-size distribution
+and the hit residuals for an extrapolation of the simulation to
+$25\,\micron$ pitch pixels with $50\,\micron$ thick sensors with a
+Timepix3-type readout chip operated at 500 electrons threshold with
+10-bit TOT measurement and an electronic noise of $\sim$90
+electrons. The same digitiser as the one used to validate the
+simulation is used for the extrapolation. Even with a small pitch, in
+such thin sensors, only $\sim$16\% of clusters originating from
+minimum ionising particles contain more than one pixel. The residual
+distribution is therefore dominated by the broad peak from
+single-pixel clusters and the resulting resolution of $\sim6\,\micron$
+(with the unfolded tracking resolution) is still significantly worse
+than the required $3\,\micron$. It can be concluded that the required
+resolution can be either obtained with smaller pixels using planar
+sensors or new solution of charge sharing are needed in order to
+reduce even more the number of single-pixel clusters. By tilting the
+detectors, the charge sharing could be as well optimised.
 
 \begin{figure}[htbp]\centering
   \begin{subfigure}[b]{0.45\textwidth}
