--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -693,7 +693,9 @@ pixels. A single-chip indium bump bonding process for $25\,\micron$
 pitch has been developed at SLAC~\cite{SLACBumpBonding} and a few
 assemblies with $200\,\micron$ thick planar sensors are successfully
 bump-bonded to CLICpix ASICs. The yield stays limited and unconnected,
-shorted and dead pixels are present~\cite{AlipourTehrani2016}.
+shorted and dead pixels are present~\cite{AlipourTehrani2016}. At the
+moment, these assemblies can not be used to fully characterise the
+thin sensors.
 
 Previously, we have seen a good agreement between the AllPix
 simulations and the data taken in the test beams for thin silicon
@@ -705,20 +707,22 @@ the performance of the CLICpix ASIC.
 Figure~\ref{fig:cluSize25Pitch} shows the cluster-size distribution
 and the hit residuals for an extrapolation of the simulation to
 $25\,\micron$ pitch pixels with $50\,\micron$ thick sensors with a
-Timepix3-type readout chip operated at 500 electrons threshold with
+Timepix3-type readout ASIC operated at 500 electrons threshold with
 10-bit TOT measurement and an electronic noise of $\sim$90
 electrons. The same digitiser as the one used to validate the
 simulation is used for the extrapolation. Even with a small pitch, in
-such thin sensors, only $\sim$16\% of clusters originating from
-minimum ionising particles contain more than one pixel. The residual
+such thin sensors, $\sim$70\% of clusters originating from minimum
+ionising particles contain one pixel (the fraction of single-pixel
+clusters with a $55\,\micron$ pitch is $\sim 83\%$). The residual
 distribution is therefore dominated by the broad peak from
-single-pixel clusters and the resulting resolution of $\sim6\,\micron$
-(with the unfolded tracking resolution) is still significantly worse
-than the required $3\,\micron$. It can be concluded that the required
-resolution can be either obtained with smaller pixels using planar
-sensors or new solution of charge sharing are needed in order to
-reduce even more the number of single-pixel clusters. By tilting the
-detectors, the charge sharing could be as well optimised.
+single-pixel clusters and the resulting resolution of
+$\sim6.4\,\micron$ (the tracking resolution is not unfolded) is still
+significantly worse than the required $3\,\micron$. It can be
+concluded that the required resolution can not be achieved with the
+$25\,\micron$ pitch. Smaller pixels can show other limiting
+factors. The CLIC pixel detector R\&D is considering new solution
+where planar sensors are not used.
+
 
 \begin{figure}[htbp]\centering
   \begin{subfigure}[b]{0.45\textwidth}
