Few cut pictures

--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -857,7 +857,8 @@ by an electronics chip.
 \begin{figure}[htbp]
   % \begin{wrapfigure}{r}{0.5\textwidth} 
   \centering
-  \includegraphics[width=0.5\textwidth]{figures/ChargeSharing/PixelCell.png}
+  \includegraphics[width=\textwidth, trim = 30mm 90mm 30mm 45mm,
+  clip]{figures/ChargeSharing/PixelCell.pdf}
   \caption{Schematic layout of one pixel cell in a hybrid pixel
     detector. From~\cite{Rossi:976471}.}
   \label{fig:pixelCell}
@@ -914,7 +915,8 @@ measured when the two electrodes are connected in a closed circuit
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.8\textwidth]{figures/Ramo/InducedCharge_parallelPlates.png}
+  \includegraphics[width=\textwidth, trim = 50mm 200mm 50mm 45mm,
+  clip]{figures/Ramo/InducedCharge_parallelPlates.pdf}
   \caption{The charge induced on two parallel plates depending on the
     position of the charge $q$. From~\cite{Spieler2005}.}
   \label{fig:InducedCharge_parallelPlates}
