[ThinSensors] some updates

--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -487,9 +487,8 @@ pixels in a cluster and the charge information in each
 pixel. \cref{fig:residuals_cluSize} illustrates the residuals for a
 $50\,\micron$ thick sensor (assembly W19\_G7) for different cluster
 sizes. For single-pixel clusters, the hit position corresponds to the
-geometric center of the pixel and therefore a resolution of
-pitch$/\sqrt{12}$ is expected (as explained in
-\cref{sec:binaryReadout}). For multi-pixel clusters, by using the
+geometric center of the pixel and therefore the charge information can
+not improve the resolution. For multi-pixel clusters, by using the
 charge information, a more accurate interpolation of the hit position
 can be obtained and the resolution is better than the geometrical
 information (by using the $\eta$-correction method as described in
